src/objects/Mail_Template_Input__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mail Template Inputs</relationshipLabel>
        <relationshipName>Mail_Template_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Time__c</fullName>
        <label>Maintenance End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Time__c</fullName>
        <label>Maintenance Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mail_Template_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mail Template Input</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Template Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>